<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="@color/colorWhite"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.toant.googlemap.activities.LoginActivity">

    <ImageView
        android:id="@+id/imgAvt"
        android:layout_width="120dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/logodoan" />

    <LinearLayout
        android:layout_margin="12dp"
        android:layout_below="@+id/imgAvt"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtUsername"
            android:hint="@string/str_username"
            android:textColorHint="@color/grey"
            android:background="@drawable/edt_border"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <EditText
            android:layout_marginTop="12dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:id="@+id/edtPassword"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:hint="@string/str_password"
            android:textColorHint="@color/grey"
            android:background="@drawable/edt_border"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_marginTop="12dp"
            android:text="@string/btnLogIn"
            android:textColor="@color/colorWhite"
            android:theme="@style/CustomButton"
            android:layout_width="match_parent"
            android:layout_height="55dp" />

    </LinearLayout>

    <TextView
        android:layout_margin="12dp"
        android:text="@string/str_login"
        android:textColor="@color/grey"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
