<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.toant.googlemap.activities.AddNewActivity">
    <LinearLayout
        android:id="@+id/linlaHeaderProgress"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >
        <ProgressBar
            android:id="@+id/pbHeaderProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </ProgressBar>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:padding="@dimen/padding12"
            android:background="@color/bg_textview"
            android:text="@string/lbl_organization"
            style="@style/tvBlack14"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edtOrganizationName"
            android:drawableStart="@drawable/ic_event_note_black_24dp"
            android:layout_marginBottom="@dimen/padding6"
            android:drawablePadding="@dimen/padding12"
            android:padding="@dimen/padding12"
            android:hint="@string/hint_organization"
            android:layout_width="match_parent"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginStart="@dimen/padding12"
            android:layout_marginBottom="@dimen/padding12"
            android:background="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:padding="@dimen/padding12"
            android:background="@color/bg_textview"
            android:text="@string/lbl_contact_information"
            style="@style/tvBlack14"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/btnSelectLocation"
                android:paddingStart="@dimen/padding12"
                android:src="@drawable/leku_ic_search"
                android:background="@color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/edtLocation"
                android:text="0.0, 0.0"
                android:layout_marginBottom="@dimen/padding6"
                android:padding="@dimen/padding12"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="@dimen/padding12"
            android:layout_marginBottom="@dimen/padding12"
            android:background="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <EditText
            android:id="@+id/edtPhoneNumber"
            android:hint="@string/hint_phone_number"
            android:drawableLeft="@drawable/ic_phone_black_24dp"
            android:inputType="phone"
            android:layout_marginBottom="@dimen/padding6"
            android:drawablePadding="@dimen/padding12"
            android:padding="@dimen/padding12"
            android:layout_width="match_parent"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginLeft="@dimen/padding12"
            android:layout_marginBottom="@dimen/padding12"
            android:background="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:padding="@dimen/padding12"
            android:background="@color/bg_textview"
            android:text="@string/lbl_area"
            style="@style/tvBlack14"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!--// spinner-->

        <LinearLayout
            android:id="@+id/rlFilter"
            android:padding="@dimen/padding12"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:textAlignment="center"
                android:id="@+id/spnCity"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Spinner
                android:textAlignment="center"
                android:id="@+id/spnDistrict"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Spinner
                android:textAlignment="center"
                android:id="@+id/spnXA"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="@dimen/padding12"
            android:layout_marginBottom="@dimen/padding12"
            android:background="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:padding="@dimen/padding12"
            android:background="@color/bg_textview"
            android:text="@string/lbl_image"
            style="@style/tvBlack14"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/btnTakeAvatar"
            android:layout_margin="@dimen/padding12"
            android:id="@+id/btnTakeAvatar"
            android:background="@color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/imgAddAvt"
            android:layout_marginBottom="@dimen/padding12"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="fitCenter" />

        <LinearLayout
            android:layout_marginTop="@dimen/padding12"
            android:layout_marginLeft="@dimen/padding12"
            android:layout_marginBottom="@dimen/padding12"
            android:background="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <Button
            android:text="@string/btnRelative"
            android:layout_margin="@dimen/padding12"
            android:background="@color/transparent"
            android:id="@+id/btnRelativeImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <GridView
            android:id="@+id/gvRelativeImage"
            android:numColumns="3"
            android:nestedScrollingEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:horizontalSpacing="8dp"
            android:verticalSpacing="8dp"
            android:padding="8dp"
            android:clipToPadding="false"
            android:scrollbarStyle="outsideInset" />

        <ImageView
            android:id="@+id/imgRelativeAvt"
            android:visibility="visible"
            android:scaleType="fitCenter"
            android:layout_marginBottom="@dimen/padding12"
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <LinearLayout
            android:layout_marginTop="@dimen/padding12"
            android:layout_marginLeft="@dimen/padding12"
            android:layout_marginBottom="@dimen/padding12"
            android:background="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:padding="@dimen/padding12"
            android:background="@color/bg_textview"
            android:text="@string/lbl_introduction"
            style="@style/tvBlack14"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:text="---"
            android:id="@+id/edtIntroduction"
            android:lines="3"
            android:layout_marginBottom="@dimen/padding6"
            android:drawablePadding="@dimen/padding6"
            android:padding="@dimen/padding12"
            android:layout_width="match_parent"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginLeft="@dimen/padding12"
            android:layout_marginBottom="@dimen/padding12"
            android:background="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>


        <!--<TextView-->
            <!--android:padding="@dimen/padding12"-->
            <!--android:background="@color/bg_textview"-->
            <!--android:text="@string/lbl_update_direction"-->
            <!--style="@style/tvBlack14"-->
            <!--android:textColor="@color/black"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content" />-->

    </LinearLayout>

    </ScrollView>

</LinearLayout>
